<resources>
    <string name="app_name">MyCalc</string>
    <string name="_0">0</string>
    <string name="_0j">0</string>
    <string name="c">C</string>
    <string name="lk">(</string>
    <string name="hl">)</string>
    <string name="j">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="hjjh">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="jo">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="ijoiji">-</string>
    <string name="ac">AC</string>
    <string name="oo">0</string>
</resources>