<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="32sp"
        android:id="@+id/soln_tv"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:text="@string/_0"
        android:layout_above="@id/result_tv"
        android:layout_margin="16dp">
    </TextView>

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_0j"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="64sp">

    </TextView>
    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/C"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/c"
                app:backgroundTint="#C81919"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/brac"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/lk"
                app:backgroundTint="#6F7273"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp">
            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/brac1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/hl"
                app:backgroundTint="#6F7273"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp">
            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/div"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/j"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="#F4511E"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/n8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/n9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiply"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/hjjh"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="#F4511E"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/n5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/n6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/add"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/jo"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="#F4511E"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/n2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/n3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/sub"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/ijoiji"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="#F4511E"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/AC"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/ac"
                app:backgroundTint="#C81919"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="36dp">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/n0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/oo"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/dot"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="."
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="HardcodedText">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/equal"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="="
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="#F4511E"
                app:cornerRadius="36dp"
                tools:ignore="HardcodedText">

            </com.google.android.material.button.MaterialButton>


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>